This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Evolution 1.0.3 ($Rev: 6622 $ - $Date: 2010-03-28 01:07:16 +0900 (日, 28 3 2010) $)
===================================
--------------------------------------------
Security:
--------------------------------------------
* [#MODX-1758] Fix issue described in JVN#46669729, XSS possibility with searchHighlight plugin
* [#MODX-1793] TinyMCE link lists are not secured if manager session does not exist

--------------------------------------------
Bugfixes:
--------------------------------------------
* [#MODX-1472] Bad path to MODxCarbon transparent GIF
* [#MODX-1396] Add language string on module configuration screen
* [#MODX-1424] Fix SQL errors when adding user/resource groups with apostrophes in them
* [#MODX-1589] Remove duplicated pagetitle sort option for tree
* [#MODX-1608] Fix background image on TV sort list for templates
* [#MODX-1298] Links exchanged in demo site for Developers and Administration guides
* [#MODX-1079] "Edit resource" title changes on changing the template
* [#MODX-1630] Correct modx version reference in System Information screen
* [#MODX-1537] Weblink internal doc ID selection icon doesn't change
* [#MODX-1408] getVersionData out of sync with version.inc.php
* [#MODX-1431] Correct typo in install footer
* [#MODX-1449] Typo in demo site text
* [#MODX-1580] PHP typo in mutate_content.dynamic.php
* [#MODX-1506] QuickManager+ javascript errors when editing a resource
* [#MODX-1106] Change help icons on TV create/edit screen
* [#MODX-1103] Element Selector, part of the letters hides in search box
* [#MODX-1566] Fix problem with Forgot Password confirmation link in WebLogin
* [#MODX-1659] Stay option for adding another manager/web user not working correctly
* [#MODX-1164] Unable to set cssStyle when using getHTMLGrid